@@ -110,6 +110,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|TestUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|TimeUnits
 import|;
 end_import
@@ -177,16 +191,18 @@ name|TimeoutSuite
 argument_list|(
 name|millis
 operator|=
-literal|80
+literal|8
 operator|*
 name|TimeUnits
 operator|.
 name|HOUR
 argument_list|)
+comment|// The two hour time was achieved on a Linux 3.13 system with these specs:
+comment|// 3-core AMD at 2.5Ghz, 12 GB RAM, 5GB test heap, 2 test JVMs, 2TB SATA.
 annotation|@
 name|Monster
 argument_list|(
-literal|"takes ~ 30 minutes"
+literal|"takes ~ 2 hours if the heap is 5gb"
 argument_list|)
 DECL|class|Test2BNumericDocValues
 specifier|public
@@ -294,6 +310,14 @@ operator|.
 name|OpenMode
 operator|.
 name|CREATE
+argument_list|)
+operator|.
+name|setCodec
+argument_list|(
+name|TestUtil
+operator|.
+name|getDefaultCodec
+argument_list|()
 argument_list|)
 argument_list|)
 decl_stmt|;
